--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </div>
     <div class="container container-fluid result-container">
     </div>
+    <p id="sig">Design and code by Justin Joyce</p>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
